ASSEMBLY = Hyena
TARGET = library
LINK = -r:Mono.Posix -r:System  -r:System.Core
SOURCES =  \
	Hyena.Data/BaseListModel.cs \
	Hyena.Data/ICareAboutView.cs \
	Hyena.Data/IFilterable.cs \
	Hyena.Data/IListModel.cs \
	Hyena.Data/ISortable.cs \
	Hyena.Data/ISortableColumn.cs \
	Hyena.Data/ModelSelection.cs \
	Hyena.Data/SortType.cs \
	Hyena.Query/QueryListNode.cs \
	Hyena.Query/QueryNode.cs \
	Hyena.Query/QueryParser.cs \
	Hyena.Query/QueryTermNode.cs \
	Hyena.Query/QueryToken.cs \
	Hyena.Data/PropertyStore.cs \
	Hyena.CommandLine/Layout.cs \
	Hyena.CommandLine/LayoutOption.cs \
	Hyena.CommandLine/LayoutGroup.cs \
	Hyena.CommandLine/CommandLineParser.cs \
	Hyena.Data/IPropertyStoreExpose.cs \
	Hyena/IUndoAction.cs \
	Hyena/UndoManager.cs \
	Hyena.Data/ColumnDescription.cs \
	Hyena.Data/ICacheableModel.cs \
	Hyena.Collections/RangeCollection.cs \
	Hyena.Collections/IStackProvider.cs \
	Hyena.Collections/IntervalHeap.cs \
	Hyena.Collections/Selection.cs \
	Hyena.Collections/SelectionProxy.cs \
	Hyena.Query/QueryField.cs \
	Hyena.Query/UserQueryParser.cs \
	Hyena.Query/XmlQueryParser.cs \
	Hyena.Query/QueryFieldSet.cs \
	Hyena.Data/ModelCache.cs \
	Hyena.Query/DateQueryValue.cs \
	Hyena.Query/FileSizeQueryValue.cs \
	Hyena.Query/IntegerQueryValue.cs \
	Hyena.Query/QueryOperator.cs \
	Hyena.Query/QueryValue.cs \
	Hyena.Query/StringQueryValue.cs \
	Hyena/Timer.cs \
	Hyena/DateTimeUtil.cs \
	Hyena.SExpEngine/ArithmeticFunctionSet.cs \
	Hyena.SExpEngine/CastFunctionSet.cs \
	Hyena.SExpEngine/CompareFunctionSet.cs \
	Hyena.SExpEngine/ControlFunctionSet.cs \
	Hyena.SExpEngine/Evaluator.cs \
	Hyena.SExpEngine/EvaluatorBase.cs \
	Hyena.SExpEngine/FunctionFunctionSet.cs \
	Hyena.SExpEngine/FunctionNode.cs \
	Hyena.SExpEngine/FunctionSet.cs \
	Hyena.SExpEngine/ListFunctionSet.cs \
	Hyena.SExpEngine/Literals.cs \
	Hyena.SExpEngine/LogicFunctionSet.cs \
	Hyena.SExpEngine/Parser.cs \
	Hyena.SExpEngine/StringFunctionSet.cs \
	Hyena.SExpEngine/TreeNode.cs \
	Hyena.SExpEngine/UtilityFunctionSet.cs \
	Hyena.Data/ArrayModelCache.cs \
	Hyena.Data/DictionaryModelCache.cs \
	Hyena.Query/AliasedObjectSet.cs \
	Hyena/StringUtil.cs \
	Hyena.Query/QueryLimit.cs \
	Hyena.Query/QueryOrder.cs \
	Hyena/Log.cs \
	Hyena/CryptoUtil.cs \
	Hyena/PlatformDetection.cs \
	Hyena.Query/IntegerKeyedObjectQueryValue.cs \
	Hyena/ConsoleCrayon.cs \
	Hyena.Data/ISelectable.cs \
	Hyena.Query/NullQueryValue.cs \
	Hyena.Query/RelativeTimeSpanQueryValue.cs \
	Hyena.Query/TimeSpanQueryValue.cs \
	Hyena.Collections/Tests/IntervalHeapTests.cs \
	Hyena.Collections/Tests/RangeCollectionTests.cs \
	Hyena.Query/Tests/QueryTests.cs \
	Hyena/Tests/CryptoUtilTests.cs \
	Hyena/Tests/DateTimeUtilTests.cs \
	Hyena/Tests/StringUtilTests.cs \
	Hyena/Tests/TestBase.cs \
	Hyena.Data/ICacheableItem.cs \
	Hyena.Collections/CollectionExtensions.cs \
	Hyena.Collections/QueuePipeline.cs \
	Hyena.Collections/Tests/QueuePipelineTests.cs \
	Hyena.Collections/QueuePipelineElement.cs \
	Hyena.Collections/WriteLineElement.cs \
	Hyena.Json/Tokenizer.cs \
	Hyena.Json/Token.cs \
	Hyena.Json/JsonObject.cs \
	Hyena.Json/Serializer.cs \
	Hyena.Json/JsonArray.cs \
	Hyena.Json/Tests/TokenizerTests.cs \
	Hyena.Json/TokenType.cs \
	Hyena.Metrics/DbSampleStore.cs \
	Hyena.Metrics/HttpPoster.cs \
	Hyena.Metrics/ISampleStore.cs \
	Hyena.Metrics/MemorySampleStore.cs \
	Hyena.Metrics/Metric.cs \
	Hyena.Metrics/MetricsCollection.cs \
	Hyena.Metrics/Sample.cs \
	Hyena.Metrics/Tests/MetricsTests.cs \
	Hyena.Json/Deserializer.cs \
	Hyena.Json/Tests/SerializerTests.cs \
	Hyena.Json/IJsonCollection.cs \
	Hyena.Json/Tests/DeserializerTests.cs \
	Hyena/Delegates.cs \
	Hyena.Collections/LruCache.cs \
	Hyena.Query/ExactStringQueryValue.cs \
	Hyena.Jobs/Job.cs \
	Hyena.Jobs/JobExtensions.cs \
	Hyena.Jobs/PriorityHints.cs \
	Hyena.Jobs/Resource.cs \
	Hyena.Jobs/Scheduler.cs \
	Hyena.Jobs/SimpleAsyncJob.cs \
	Hyena.Jobs/Tests/SchedulerTests.cs \
	Hyena/ApplicationContext.cs \
	Hyena/ThreadAssist.cs \
	Hyena/XdgBaseDirectorySpec.cs \
	System.Web/Helpers.cs \
	System.Web/HttpUtility.cs

include $(top_srcdir)/build/build.mk
EXTRA_DIST += hyena.pc.in 
